Upgrade dependencies, remove checkerframework